Worked on AngularJS
- Settings are preserved when app is closed (need to check in-app debugging)

--- a/Mobile_App/www/templates/login.html
+++ b/Mobile_App/www/templates/login.html
@@ -19,7 +19,7 @@
             </ul>
             <div class="spacer" style="height: 40px;"></div>
             <button ng-disabled="loginform.$invalid" class="button button-stable button-block" ng-click="login()">Log in</button>
-            <a ui-sref="signup()" style="color:#455A64" id="login-button4" class="button button-positive button-block button-clear">Or create an account</a>
+            <a ui-sref="signup()" style="color:#455A64" id="login-button4" class="button button-block button-clear">Or create an account</a>
         </form>
     </ion-content>
 </ion-view>
