--- a/Mobile_App/www/css/generalStylling.css
+++ b/Mobile_App/www/css/generalStylling.css
@@ -2,6 +2,10 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif!important;
     font-size : 16px;
 }
+
+sub{
+    color:#90A4AE;
+}
 /* BASE FONT SIZE IS 16px*/
 
 .header {
@@ -66,7 +70,6 @@
     background-color: white!important;
 }
 
-
 /*sidemenu icons color*/
 
 .normalSidemenuIcon {
@@ -101,6 +104,13 @@
     background-color: rgb(68, 68, 68);
 }
 
+.item .item-content .item-select{
+    padding-top:1%!important;
+    padding-bottom: 1%!important;
+    padding-left:5%!important;
+    padding-right:5%!important;
+}
+
 
 /*CSS for Mainition animation from nightmode to normalmode and back*/
 
@@ -110,7 +120,6 @@
 .nightmodeBackgroundMain-remove {
     transition: background-color 150ms linear;
 }
-
 
 /*
 * Popup class
