Worked on AngularJS and Front-End
- Logout functionality implemented with popup regarding user's logout

--- a/Mobile_App/www/templates/eyeReader.html
+++ b/Mobile_App/www/templates/eyeReader.html
@@ -51,6 +51,12 @@
                         Settings
                     </span>
                 </a>
+                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item7" ng-click="logout()" menu-close="">
+                    <i ng-class="getSidemenuIconClass()" class="icon ion-log-out"></i>
+                    <span ng-class="getFontClass()" ng-style="selectedFontsize">
+                        Log out
+                    </span>
+                </a>
             </div>
         </ion-content>
     </ion-side-menu>
