--- a/Mobile_App/www/templates/eyeReader.html
+++ b/Mobile_App/www/templates/eyeReader.html
@@ -16,7 +16,8 @@
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header sideMenuPadding" ng-class="getBackgroundClass()">
             <div class="list">
-                <a ng-class="getBackgroundClass()" class="item item-icon-left item-avatar" id="eyeReader-list-item10" ui-sref="eyeReader.profile()" menu-close="">
+                <a ng-class="getBackgroundClass()" class="item item-icon-left item-avatar" id="eyeReader-list-item10" ui-sref="eyeReader.profile()"
+                    menu-close="">
                     <img src="./images/eyeReader_Logo.png">
                     <h2 ng-class="getNightmodeHeaderClass()">{{currUser}}</h2>
                     <p class="sideLetters">View your profile</p>
@@ -27,19 +28,22 @@
                         News feed
                     </span>
                 </a>
-                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item8" ui-sref="eyeReader.addSources()" menu-close="">
+                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item8" ui-sref="eyeReader.addSources()"
+                    menu-close="">
                     <i ng-class="getSidemenuIconClass()" class="icon ion-android-add-circle"></i>
                     <span ng-class="getFontClass()" ng-style="selectedFontsize">
                         Add Sources
                     </span>
                 </a>
-                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item9" ui-sref="eyeReader.savedArticles()" menu-close="">
+                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item9" ui-sref="eyeReader.savedArticles()"
+                    menu-close="">
                     <i ng-class="getSidemenuIconClass()" class="icon ion-android-archive"></i>
                     <span ng-class="getFontClass()" ng-style="selectedFontsize">
                         Saved
                     </span>
                 </a>
-                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item16" ui-sref="eyeReader.statistics()" menu-close="">
+                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item16" ui-sref="eyeReader.statistics()"
+                    menu-close="">
                     <i ng-class="getSidemenuIconClass()" class="icon ion-arrow-graph-up-right"></i>
                     <span ng-class="getFontClass()" ng-style="selectedFontsize">
                         Statistics
