--- a/Mobile_App/www/templates/statistics.html
+++ b/Mobile_App/www/templates/statistics.html
@@ -16,10 +16,11 @@
             </label>
         </div>
 
-        <canvas class="chart chart-bar" chart-data="barData" chart-labels="barLbls"  chart-colors="chartColors"
-	            chart-series="series" style="width:100%; height:54%; margin-top:20%;" chart-click="onClick" ng-if="selectedSource==0"></canvas> 
+        <canvas class="chart chart-bar" chart-data="barData" chart-labels="barLbls" chart-colors="chartColors" chart-series="series"
+            style="width:100%; height:54%; margin-top:20%;" chart-click="onClick" ng-if="selectedSource==0"></canvas>
 
-        <canvas id="statisticsDoughnut" class="chart chart-doughnut"chart-data="doughnutData" chart-labels="doughnutLbls" style="width:100%; height:52%; margin-top:20%;" ng-if="selectedSource!=0"></canvas> 
+        <canvas id="statisticsDoughnut" class="chart chart-doughnut" chart-data="doughnutData" chart-labels="doughnutLbls" style="width:100%; height:52%; margin-top:20%;"
+            ng-if="selectedSource!=0"></canvas>
 
     </ion-content>
 </ion-view>
