--- a/Mobile_App/www/templates/article.html
+++ b/Mobile_App/www/templates/article.html
@@ -1,7 +1,8 @@
 <ion-view hide-back-button="false" title="Article" id="page9">
     <ion-content padding="false" class="has-header generalPadding" ng-controller="articleCtrl" ng-class="getBackgroundClass()">
         <h2 ng-class="getNightmodeHeaderClass()" id="article-heading4">
-            <span class="boldLetters" ng-style="fontsize">{{article.Title}}</span></h2>
+            <span class="boldLetters" ng-style="fontsize">{{article.Title}}</span>
+        </h2>
         <div id="article-markdown3" class="show-list-numbers-and-dots">
             <p ng-class="getNightmodeHeaderClass()" ng-style="fontsize" class="sideLetters">{{article.Author}} | {{article.Date}}</p>
         </div>
