--- a/Mobile_App/www/templates/newsFeed.html
+++ b/Mobile_App/www/templates/newsFeed.html
@@ -7,7 +7,7 @@
     </ion-header-bar>
     <ion-content padding="false" overflow-scroll="false" class="has-header generalPadding" ng-controller="newsFeedCtrl" ng-class="getBackgroundClass()">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-        <div ng-if="sources.total > 0" ng-class="getBackgroundClass()">
+        <div ng-if="selectedSources.length > 0" ng-class="getBackgroundClass()">
             <ion-list id="newsFeed-list9" ng-repeat="article in articles | filter: { Title:userSearch }" ng-class="getBackgroundClass()">
                 <ion-item ng-show="!{{article.Deleted}}" class="item-thumbnail-left item-icon-right" ui-sref="eyeReader.article({article : article})"
                     ng-class="getBackgroundClass()">
@@ -33,7 +33,7 @@
             <ion-infinite-scroll on-infinite="loadMore()" distance="1%">
             </ion-infinite-scroll>
         </div>
-        <div ng-if="sources.total == 0">
+        <div ng-if="selectedSources.length == 0">
             <ion-list>
                 NO SOURCE SELECTED
             </ion-list>
