--- a/Mobile_App/www/templates/newsFeed.html
+++ b/Mobile_App/www/templates/newsFeed.html
@@ -33,9 +33,14 @@
             <ion-infinite-scroll on-infinite="loadMore()" distance="1%">
             </ion-infinite-scroll>
         </div>
-        <div ng-if="selectedSources.length == 0">
+        <div ng-if="selectedSources.length == 0"">
             <ion-list>
-                NO SOURCE SELECTED
+                <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%" > Swipe right to add sources.</p>
+                <div style="width:inherit; text-align: center; padding-top: 25%">
+                    <i style="color: #90A4AE; font-size:1250%!important" class="icon ion-ios-glasses-outline"></i>
+                </div>
+               <h1 style="color: #90A4AE; font-size: 60px; text-align: center"> Oops!</h1>  
+               <h1 style="color: #90A4AE; font-size: 15px; text-align: center">There is no source to read from.</h1>  
             </ion-list>
         </div>
     </ion-content>
