Worked on AngularJS and Front-End
- Added splash screen and icon
- Added basic implementation for report and click counters

--- a/Mobile_App/www/css/generalStylling.css
+++ b/Mobile_App/www/css/generalStylling.css
@@ -8,7 +8,7 @@ sub{
 }
 
 .background-img {
-    background: url("../img/WelcomeView.jpg") no-repeat;
+    background: url("../img/welcome.jpg") no-repeat;
     background-size: cover;
 }
 /* BASE FONT SIZE IS 16px*/
