--- a/Mobile_App/www/templates/welcome.html
+++ b/Mobile_App/www/templates/welcome.html
@@ -2,11 +2,11 @@
     <ion-content padding="true" class="background-img" ng-controller="welcomeCtrl">
 
 
-       <img src="../img/eyeReader_Logo.png" style="width:45%; height:25%; margin-top:45%; margin-left: auto; margin-right: auto; display: block;">
+       <img src="img/logo.png" style="width:45%; height:25%; margin-top:45%; margin-left: auto; margin-right: auto; display: block;">
 
 
-        <div style="text-align: center; padding-top:40%">
-             <button style="background-color:#455A64; color:white; width:35%;" class="button button-stable" ng-click="goToLogin()">GET STARTED</button>
+        <div style="text-align: center; padding-top:40%;">
+             <button style="background-color:#455A64; color:white; width:36%;" class="button button-stable" ng-click="goToLogin()">GET STARTED</button>
         </div>
       
     </ion-content>
