Worked on Front-End
- Added background image to login and signup pages
- Welcome screen is displayed as the first page until the user taps the Get Started button
- Splitted angularjs controllers to individual files

--- a/Mobile_App/www/css/generalStylling.css
+++ b/Mobile_App/www/css/generalStylling.css
@@ -7,10 +7,25 @@ sub{
     color:#90A4AE;
 }
 
-.background-img {
+.custom-background-img {
     background: url("../img/welcome.jpg") no-repeat;
-    background-size: cover;
+    background-size: transparent;
+    -wekbit-background-size:cover;
 }
+
+.welcome-logo{
+    max-width:100%;
+    width:auto/2; 
+    height:auto/4; 
+}
+
+.welcome-button{
+    background-color:#455A64!important; 
+    color:white!important; 
+    max-width:100%;
+    width: (auto/2) * 2;
+}
+
 /* BASE FONT SIZE IS 16px*/
 
 .header {
