--- a/Mobile_App/www/templates/login.html
+++ b/Mobile_App/www/templates/login.html
@@ -1,4 +1,5 @@
-<ion-view hide-back-button="true" title="Login" id="page8">
+<ion-view hide-back-button="true" title="Login" id="page8" class="custom-background-img">
+    <ion-nav-bar class="header"></ion-nav-bar>
     <ion-content padding="true" class="has-header" ng-controller="loginCtrl">
         <form id="loginform" name="loginform" class="list">
             <ul class="list">
