--- a/Mobile_App/www/templates/settings.html
+++ b/Mobile_App/www/templates/settings.html
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
             </ion-toggle>
-            <ion-toggle ng-class="getBackgroundClass()" ng-disabled="data.markupEnabled" ng-model="data.hideEnabled" type="checkbox"
+            <ion-toggle ng-class="getBackgroundClass()" ng-model="data.hideEnabled" ng-disabled="data.markupEnabled" type="checkbox"
                 ng-cloak>
                 <ul>
                     <li>
@@ -79,5 +79,7 @@
                 <input ng-model="data.tolerance" type="range" min="0" max="100" step="1" name="Tolerance Level Range">
             </li>
         </ul>
+        <button class="button button-stable welcome-button" ng-click="save()">Apply changes</button>
+        
     </ion-content>
 </ion-view>
