--- a/Mobile_App/www/templates/signup.html
+++ b/Mobile_App/www/templates/signup.html
@@ -1,4 +1,7 @@
-<ion-view hide-back-button="false" title="Signup" id="page7">
+<ion-view hide-back-button="false" title="Signup" id="page7" class="custom-background-img">
+    <ion-nav-bar class="header">
+        <ion-nav-back-button style="color:white"></ion-nav-back-button>
+    </ion-nav-bar>
     <ion-content padding="true" class="has-header" ng-controller="signupCtrl">
         <form name="signupform" id="signupform">
 
