--- a/Mobile_App/www/css/ionic.app.css
+++ b/Mobile_App/www/css/ionic.app.css
@@ -7240,6 +7240,7 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.activated {
 
 .modal-backdrop-bg {
     pointer-events: none;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .modal {
@@ -10734,8 +10735,8 @@ input:checked+.checkbox-icon:after {
 }
 
 .toggle.toggle-balanced input:checked+.track {
-    border-color: #33cd5f;
-    background-color: #33cd5f;
+    border-color: #455A64;
+    background-color: #455A64;
 }
 
 .toggle.toggle-energized input:checked+.track {
