--- a/Mobile_App/www/templates/eyeReader.html
+++ b/Mobile_App/www/templates/eyeReader.html
@@ -55,6 +55,12 @@
                         Settings
                     </span>
                 </a>
+                <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item7" ng-click="openModal()" menu-close="">
+                    <i ng-class="getSidemenuIconClass()" class="icon ion-information-circled"></i>
+                    <span ng-class="getFontClass()" ng-style="selectedFontsize">
+                        Tutorial
+                    </span>
+                </a>
                 <a ng-class="getBackgroundClass()" class="item item-icon-left" id="eyeReader-list-item7" ng-click="logout()" menu-close="">
                     <i ng-class="getSidemenuIconClass()" class="icon ion-log-out"></i>
                     <span ng-class="getFontClass()" ng-style="selectedFontsize">
