Worked on AngularJS and Front-End
- Fixed scaling issue of background image
- Fixed bug where saved articles array was not properly iterated

--- a/Mobile_App/www/css/generalStylling.css
+++ b/Mobile_App/www/css/generalStylling.css
@@ -27,7 +27,10 @@ sub {
 .custom-background-img {
     background: url("../img/welcome.jpg") no-repeat;
     background-size: transparent;
-    -wekbit-background-size: cover;
+    -webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 .welcome-logo {
