--- a/Mobile_App/www/templates/reportArticle.html
+++ b/Mobile_App/www/templates/reportArticle.html
@@ -1,5 +1,5 @@
 <div class="has-header generalPadding" ng-controller="reportArticleCtrl" ng-class="getBackgroundClass()">
     Why do you want to report this article?
-    <ion-checkbox style="border:0px">The article cotains hate speech</ion-checkbox>
-    <ion-checkbox style="border:0px">This article cotains fake news</ion-checkbox>
+    <ion-checkbox style="border:0px">The article contains hate speech</ion-checkbox>
+    <ion-checkbox style="border:0px">This article contains fake news</ion-checkbox>
 </div>
