--- a/Mobile_App/www/templates/tutorial.html
+++ b/Mobile_App/www/templates/tutorial.html
@@ -1,47 +1,69 @@
 <ion-modal-view class="tutorialModal">
     <ion-content ng-controller="tutorialCtrl">
         <ion-slides options="options" slider="data.slider">
+
+            <ion-slide-page class="generalTutorial">
+                <div ><h3 class="boldLetters">Edit Profile</h3></div>
+                <p>1. Click your username in the side menu.</p>
+                <img src="img/viewYourProfile.png">
+                <p>2. Click "Edit Profile" to edit your personal information.</p>
+                <p>2. Save all the changes..</p>
+                  <img src="img/editProfile.png">
+              </ion-slide-page>
+
             <ion-slide-page class="generalTutorial">
               <div><h3 class="boldLetters">Add Sources</h3></div>
                 <br/>
-              <p>1. To add sources click on "Add Sources" in the side menu.</p>
-              <p>2. Select or deselct the sources that you want to read articles from.</p>
+              <p>1. Click "Add Sources" in the side menu.</p>
+              <p>2. Select sources to read articles.</p>
             </ion-slide-page>
 
             <ion-slide-page class="generalTutorial">
               <div ><h3 class="boldLetters">Save Article</h3></div>
-              <p>1. Slide the article from the small arrow '>' next to the article.</p>
+              <p>1. Slide the small arrow '>' next to the article.</p>
               <p>2. Select the 
-                <i style="display:inline-block;" class="icon ion-android-star-outline"></i>
-                in the options to save the article.</p>
-              <p>3. The article will be saved in the "Saved" in the side menu.</p>
+                <i style="display:inline-block;" class="icon ion-android-star-outline"></i> to save the article.</p>
+                <img src="img/articleSlide.png">
+                <p>3. The article will be saved in the "Saved" in the side menu.</p>
+                <img src="img/savedArticles.png">
             </ion-slide-page>
 
             <ion-slide-page class="generalTutorial">
               <div><h3 class="boldLetters">Report Article</h3></div>
-              <p>1. Slide the article from the small arrow '>' next to the article.</p>
+              <p>1. Slide the small arrow '>' next to the article.</p>
               <p>2. Select the 
-                <i style="display:inline-block;" class="icon ion-alert-circled"></i>
-                in the options to report the article.</p>
-              <p>3. Check in the pop-up the reason you want to report this article.</p>
+                <i style="display:inline-block;" class="icon ion-alert-circled"></i> to report the article.</p>
+                <img src="img/articleSlide.png">
+                <p>3. Check the reason you want to report this article.</p>
+                <img src="img/reportModal.png">
             </ion-slide-page>
 
             <ion-slide-page class="generalTutorial">
                 <div><h3 class="boldLetters">View Statistics</h3></div>
-                <p>1. To view the statistics click on "Statistics" in the side menu.</p>
-                <p>2. The default graph is shown the number of report in the top5 sources.
+                <p>1. Click "Statistics" in the side menu.</p>
                 <p>3. To see the statistics of a source use the drop down "Select Sources".</p>
+              </ion-slide-page>
+
+              <ion-slide-page class="generalTutorial">
+                <div><h3 class="boldLetters">View Statistics</h3></div>
                 <p>4. To chance the statistic's type use the drop down "View Statistics".</p>
-                <p>       Report: The percentage of the amount of report in a source.</p>
-                <p>       Hate speech: The percentage of the amount of hate speech in the article or in the comments.</p>
-                <p>       Setiment Analysis: The percenage of.</p>
+                <p>       Report: The percentage of reported articles of a source.</p>
+                <p>       Hate speech: The percentage of hate speech in articles or in the comments of a source.</p>
+                <p>       Sentiment Analysis: The percenage of negative, positive and neutral response.</p>
               </ion-slide-page>
 
               <ion-slide-page class="generalTutorial">
                   <div><h3 class="boldLetters">Settings</h3></div>
-                  <p>1. To change the settings of the app click on "Settings" in the side menu.</p>
-                  <p>2. Select the </p>
-                  <p>3. Check in the pop-up the reason you want to report this article.</p>
+                  <p>1. Click "Settings" in the side menu.</p>
+                  <p>2. Enable night mode option,change font size and enable article cashing for offline reading.</p>
+                  <img src="img/settingsDisplay.png">
+                </ion-slide-page>
+
+                <ion-slide-page class="generalTutorial">
+                  <div><h3 class="boldLetters">Settings</h3></div>
+                  <p>3. Enable "markup toxic" or "hide toxic" to highligh or hide toxic content.</p>
+                  <p>4. Set your tollerance level against toxic content.</p>
+                  <img src="img/settingsFiltering.png">
                 </ion-slide-page>
           </ion-slides>
     </ion-content>
