--- a/Mobile_App/www/templates/eyeReader.html
+++ b/Mobile_App/www/templates/eyeReader.html
@@ -11,7 +11,7 @@
     <ion-side-menu ng-controller="eyeReaderCtrl" side="left" id="side-menu21">
         <ion-header-bar class="sidemenuHeader">
             <div class="title title-left header header-item">
-                eyereader
+                eyeReader
             </div>
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header sideMenuPadding" ng-class="getBackgroundClass()">
