--- a/Mobile_App/www/templates/addSources.html
+++ b/Mobile_App/www/templates/addSources.html
@@ -1,7 +1,7 @@
 <ion-view title="Add Sources" id="page3">
     <ion-content padding="false" class="has-header generalPadding" ng-controller="addSourcesCtrl" ng-class="getBackgroundClass()">
         <div ng-repeat="source in sources">
-            <ion-checkbox ng-class="getBackgroundClass()" id="addSources-checkbox3" ng-click="select_deselectSource(source.URL)">
+            <ion-checkbox ng-class="getBackgroundClass()" id="addSources-checkbox3" ng-checked="source.checked" ng-click="select_deselectSource(source.URL)">
                 <span ng-style="fontsize" ng-class="getFontClass()" class="normalBlackLetters">{{source.Title}}</span>
             </ion-checkbox>
         </div>
