--- a/Mobile_App/www/templates/article.html
+++ b/Mobile_App/www/templates/article.html
@@ -1,4 +1,7 @@
-<ion-view hide-back-button="false" title="Article" id="page9">
+<ion-view hide-back-button="true" title="Article" id="page9">
+    <ion-nav-buttons side="left">
+        <a ng-click="goBack()" class="button button-icon icon ion-android-arrow-back" style="color:white"></a>
+    </ion-nav-buttons>
     <ion-content padding="false" class="has-header generalPadding" ng-controller="articleCtrl" ng-class="getBackgroundClass()">
         <h2 ng-class="getNightmodeHeaderClass()" id="article-heading4">
             <span class="boldLetters" ng-style="fontsize">{{article.Title}}</span>
@@ -32,12 +35,10 @@
         <div class="spacer" style="width: 300px; height: 20px;"></div>
 
         <div ng-if="user.isJournalist">
-            <p>Add a node:</p>
+            <p>Notes:</p>
             <ion-item style="height:200px;">
-                <textarea type="node" style="width:100%; height:100%;"></textarea>
+                <textarea type="note" ng-model="currentNotes.note" ng-blur="saveNotes()" style="width:100%; height:100%;"></textarea>
             </ion-item>
         </div>
-
-        <div class="spacer" style="width: 300px; height: 20px;"></div>
     </ion-content>
 </ion-view>
