--- a/Mobile_App/www/templates/newsFeed.html
+++ b/Mobile_App/www/templates/newsFeed.html
@@ -1,19 +1,20 @@
 <ion-view title="News Feed" id="page1">
     <ion-header-bar ng-class="getBackgroundClass()" class="bar bar-subheader item-input-inset">
-        <label ng-if="selectedSources.length > 0 && isOnline" class="item-input-wrapper" id="newsFeed-search1" name="searchArticles">
+        <label ng-if="selectedSources.sources.length > 0 && isOnline" class="item-input-wrapper" id="newsFeed-search1" name="searchArticles">
             <i class="icon ion-search placeholder-icon"></i>
-            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="userSearch">
+            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="onlineSearch">
         </label>
-        <label ng-if="cachedArticles.articles.length > 0 && !isOnline" class="item-input-wrapper" id="newsFeed-search1" name="searchArticles">
+        <label ng-if="cachedArticles.articles.length > 0 && !isOnline" ng-if="cachedArticles.articles.length > 0 && !isOnline" class="item-input-wrapper"
+            id="newsFeed-search1" name="searchArticles">
             <i class="icon ion-search placeholder-icon"></i>
-            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="userSearch">
+            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="offlineSearch">
         </label>
     </ion-header-bar>
     <ion-content padding="false" overflow-scroll="false" class="has-header generalPadding" ng-controller="newsFeedCtrl" ng-class="getBackgroundClass()">
-        <ion-refresher ng-if="selectedSources.length > 0 && isOnline" pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
+        <ion-refresher ng-if="selectedSources.sources.length > 0  && isOnline" pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
         <ion-refresher ng-if="cachedArticles.articles.length > 0 && !isOnline" pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-        <div ng-if="selectedSources.length > 0 && isOnline" ng-class="getBackgroundClass()">
-            <ion-list id="newsFeed-list9" ng-repeat="article in articles | filter: { Title:userSearch }" ng-class="getBackgroundClass()">
+        <div ng-if="selectedSources.sources.length > 0 && isOnline" ng-class="getBackgroundClass()">
+            <ion-list id="newsFeed-list9" ng-repeat="article in articles | filter: { Title:onlineSearch }" ng-class="getBackgroundClass()">
                 <ion-item ng-show="!{{article.Deleted}}" class="item-thumbnail-left item-icon-right" ng-click="articleTapped()" ui-sref="eyeReader.article({article : article})"
                     ng-class="getBackgroundClass()">
                     <img alt="img" ng-src="{{article.PictureSrc}}">
@@ -26,10 +27,10 @@
                     <ion-option-button class="button-assertive" ng-click="showDeleteConfirm({{article.Id}})">
                         <ion-icon name="delete" class="icon ion-trash-a"></ion-icon>
                     </ion-option-button>
-                    <ion-option-button ng-show="isArticleSaved({{article.Id}})" class="button-balanced" ng-click="saveArticle({{article.Id}})">
+                    <ion-option-button ng-show="isArticleSaved({{article.Id}})" class="button-balanced" ng-click="save_unsaveArticle({{article.Id}})">
                         <ion-icon name="favorite" class="icon ion-android-star"></ion-icon>
                     </ion-option-button>
-                    <ion-option-button ng-show="!isArticleSaved({{article.Id}})" class="button-balanced" ng-click="saveArticle({{article.Id}})">
+                    <ion-option-button ng-show="!isArticleSaved({{article.Id}})" class="button-balanced" ng-click="save_unsaveArticle({{article.Id}})">
                         <ion-icon name="favorite" class="icon ion-android-star-outline"></ion-icon>
                     </ion-option-button>
                 </ion-item>
@@ -38,17 +39,17 @@
             </ion-infinite-scroll>
         </div>
         <div ng-if="cachedArticles.articles.length > 0 && !isOnline" ng-class="getBackgroundClass()">
-            <ion-list id="newsFeed-list9" ng-repeat="article in cachedArticles.articles | filter: { Title:userSearch }" ng-class="getBackgroundClass()">
+            <ion-list id="newsFeed-list20" ng-repeat="article in cachedArticles.articles | filter: { Title:offlineSearch }" ng-class="getBackgroundClass()">
                 <ion-item ng-show="!{{article.Deleted}}" class="item-thumbnail-left item-icon-right" ng-click="articleTapped()" ui-sref="eyeReader.article({article : article})"
                     ng-class="getBackgroundClass()">
                     <img alt="img" ng-src="{{article.PictureSrc}}">
                     <h2 ng-style="fontsize" ng-class="getFontClass()">{{article.Title}}</h2>
                     <p ng-style="fontsizeSmaller" class="sideLetters">{{article.Content}}</p>
                     <i class="icon ion-ios-arrow-right icon-accessory"></i>
-                    <ion-option-button ng-show="isArticleSaved({{article.Id}})" class="button-balanced" ng-click="saveArticle({{article.Id}})">
+                    <ion-option-button ng-show="isArticleSaved({{article.Id}})" class="button-balanced" ng-click="save_unsaveArticle({{article.Id}})">
                         <ion-icon name="favorite" class="icon ion-android-star"></ion-icon>
                     </ion-option-button>
-                    <ion-option-button ng-show="!isArticleSaved({{article.Id}})" class="button-balanced" ng-click="saveArticle({{article.Id}})">
+                    <ion-option-button ng-show="!isArticleSaved({{article.Id}})" class="button-balanced" ng-click="save_unsaveArticle({{article.Id}})">
                         <ion-icon name="favorite" class="icon ion-android-star-outline"></ion-icon>
                     </ion-option-button>
                 </ion-item>
@@ -56,7 +57,7 @@
             <ion-infinite-scroll on-infinite="loadMore()" distance="1%">
             </ion-infinite-scroll>
         </div>
-        <div ng-if="selectedSources.length == 0 && isOnline">
+        <div ng-if="selectedSources.sources.length == 0 && isOnline">
             <ion-list>
                 <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%">Swipe right to add sources.</p>
                 <div style="width:inherit; text-align: center; padding-top: 25%">
@@ -66,9 +67,18 @@
                 <h1 style="color: #90A4AE; font-size: 15px; text-align: center">There is no source to read from.</h1>
             </ion-list>
         </div>
-
-        <ion-footer-bar align-title="middle" class="bar-assertive" ng-if="!isOnline">
-            <p class="title">NO INTERNET CONNECTION!</p>
-        </ion-footer-bar>
+        <div ng-if="cachedArticles.articles.length == 0 && !isOnline">
+            <ion-list>
+                <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%">Connect to the internet, relaunch app and select sources in order to cache some articles.</p>
+                <div style="width:inherit; text-align: center; padding-top: 25%">
+                    <i style="color: #90A4AE; font-size:1250%!important" class="icon ion-ios-glasses-outline"></i>
+                </div>
+                <h1 style="color: #90A4AE; font-size: 60px; text-align: center">Oops!</h1>
+                <h1 style="color: #90A4AE; font-size: 15px; text-align: center">There are no cached article to read.</h1>
+            </ion-list>
+        </div>
     </ion-content>
+    <ion-footer-bar ng-if="!isOnline" align-title="middle" class="bar-assertive">
+        <p class="title">NO INTERNET CONNECTION!</p>
+    </ion-footer-bar>
 </ion-view>
